VAPINAME = geometry
VALASOURCES = \
	types.vala \
	vector.vala \
	volume.vala \
	intersection.vala \
	surface.vala \
	volume-simple.vala \
	volume-box.vala \
	volume-ball.vala \
	volume-cylinder.vala \
	geometry.vala 

VAPIDEPENDS = 

noinst_LTLIBRARIES = libgeometry.la
libgeometry_la_SOURCES = $(COMPILEDSOURCES)

include ../Makefile.plugin
